Minor text formatting changes.

--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
 
     <h1>TimTr.com</h1>
     
-    <p> <em>Hello!</em> Welcome to the personal website of Tim Triemstra.
+    <p> Hello, and welcome to the personal website of Tim Triemstra.
     </br>
-    I work at Apple on developer tools, documentation, and Swift open source.
     </p>
 
 </header>
 
 <div><blockquote>
     <h3>About Tim Triemstra</h3>
-    <p>Currently live in the San Diego area with my wife and young daughter, Maggie and Luana.
+    <p>Work at Apple as an engineering manager on developer tools, documentation, and Swift open source. Have worked at <a href="https://apple.com">Apple</a> since 2005, originally as the product marketing lead for Xcode, UNIX, compilers, and Swift for the first 16 years.
     </p>
-    <p>Have worked at <a href="https://apple.com">Apple</a> since 2005, attended the <a href="https://umich.edu">University of Michigan</a> in the early 1990s, and am a proud graduate of <a href="https://www.detroitk12.org/renaissance">Detroit Renaissance High School</a>.
+    <p>Currently live in San Diego with my wife, Maggie, and young daughter, Luana. Attended the <a href="https://umich.edu">University of Michigan</a> in the early 1990s, and before that <a href="https://www.detroitk12.org/renaissance">Detroit Renaissance High School</a>.
     </p>
     <p>Originally taught myself BASIC and then 6502 assembly language on a <a href="https://en.wikipedia.org/wiki/Commodore_64">Commodore 64</a>. Won my first PC/DOS computer at age fifteen while representing Detroit Public Schools in a national programming competition.
     </p>
