Minor tweaks to capitalization and internal HTML

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <h3>Contact info</h3>
 <ul class="list-no-bullets">
   <li>📨 Email me at <em>root</em> using this domain</li>
-  <li>🐙 On GitHub at <a href="https://github.com/timtr/">GitHub.com/TimTr</a></li>
+  <li>🐙 On GitHub at <a href="https://github.com/timtr/">github.com/timtr</a></li>
   <li>🐘 On Mastodon at <a href="https://mastodon.social/@timtr">@timtr@mastodon.social</a></li>
-  <li>💬 Swift forums username is <a href="https://forums.swift.org/u/TimTr">TimTr</a></li>
+  <li>💬 Swift forums username is <a href="https://forums.swift.org/u/TimTr">timtr</a></li>
   <li>🏠 This website <a href="https://timtr.com">TimTr.com</a> is my primary online home</li>
 </ul>
 
@@ -56,25 +56,20 @@
   
   <li>🐕 🐕 <em>Dogs.</em> Maggie and I have had four dogs together, in addition to our childhood pets. We had only Bambi the first few years, a seven-pound pomeranian. He made it to almost seventeen years old, but we lost him a few weeks after moving to San Diego in 2022. We also had Mei Mei, a cavalier spaniel, whom we lost early in the pandemic, after ten years. We currently have JoJo, a border collie we rescued after he had been locked outside and abandoned. He is the friendliest dog alive! And recently we adopted DiDi, a pomeranian mix that needed a new home. JoJo and DiDi seem to really love each other.</li>
 
-</ul>
-</article>
+</ul></article><br/>
 
 
-
-
-          
-<br/>
 <article id="article_images">
 <h3>Here's a photo</h3>
 <figure>
-  <img src="./assets/tim_maggie_large.jpeg" alt="Image alt text" />
+  <img src="./assets/tim_maggie_large.jpeg" alt="Maggie and Tim on a boat selfie" />
   <figcaption>On our honeymoon.</figcaption>
 </figure>
 </article>
 
 <article id="article_footer"></article>
 
-<pre><code>  ©️ Copyright 2023 Tim Triemstra. <a href="https://timtr.com/license.txt">MIT licensed.</a>
+<pre><code>  ©️ Copyright 2023 Tim Triemstra. <a href="./license.txt">MIT licensed.</a>
 </code></pre>
 
 <footer>  <p><a href="#top">[Return to top of the page]</a></p>
